// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem component completed 1`] = `
<div
  className="todo-item completed"
  onClick={[Function]}
/>
`;

exports[`TodoItem component default render 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
/>
`;

exports[`TodoItem component with title 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  Title
</div>
`;
